--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "multer": "^1.4.2",
+    "nodemon": "^3.1.0",
+    "path": "^0.12.7"
   }
 }
