--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,4 @@
 MONGO_URL = mongodb+srv://fariasagustin3:fariasagustin3@cluster0.f9kmnai.mongodb.net/socialix?retryWrites=true&w=majority&appName=Cluster0
+CLOUDINARY_NAME=dl811zicv
+CLOUDINARY_API_KEY=381273157426274
+CLOUDINARY_API_SECRET=4R1uzxnv2hQ5-_VJWjRlmio71CQ
